# AutoSeeker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  boss_jobs.py  browser_auth.py  cookies.example.json  install_launchd.sh  launchd.plist.template  login.sh  pyproject.toml  requirements.txt  run_daily.sh  runtime_paths.py  setup.sh
.github/workflows/: ci.yml
config/: README.md  default.toml
deploy/: README.md
deploy/launchd/: README.md  boss-zhipin.plist.template
deploy/systemd/: README.md  autoseeker.service.template  autoseeker.timer  boss-zhipin.service.template  boss-zhipin.timer  install-user-timer.sh
docs/: README.md  architecture.md  configuration.md  development.md  operations.md  refactoring-roadmap.md  security.md  testing.md  web-architecture.md  web-data-and-ui.md  web-implementation-roadmap.md
scripts/: README.md  run-daily.sh  setup.sh
scripts/macos/: README.md  install-launchd.sh  login.sh
src/: README.md
src/auto_seeker/: auth.py  browser_auth.py  cli.py  config.py  default.toml  iv8_silent.py  models.py
src/auto_seeker/application/: collect_jobs.py  query_jobs.py
src/auto_seeker/domain/: filtering.py  salary.py
src/auto_seeker/infrastructure/: boss_client.py  excel_repository.py  sqlite_repository.py  stoken.py
src/auto_seeker/web/: app.py
src/auto_seeker/web/static/: app.css  app.js
src/auto_seeker/web/templates/: base.html
src/auto_seeker/web/templates/errors/: 404.html  cookie-import.html
src/auto_seeker/web/templates/jobs/: detail.html  list.html
src/auto_seeker/web/templates/runs/: list.html
src/boss_zhipin/: auth.py  browser_auth.py  cli.py  config.py  default.toml
src/boss_zhipin/application/: collect_jobs.py
src/boss_zhipin/domain/: filtering.py
src/boss_zhipin/infrastructure/: boss_client.py  excel_repository.py  stoken.py
systemd/: boss-zhipin.service.template  install-user-timer.sh
tests/: README.md  test_auth.py  test_boss_client.py  test_boss_jobs.py  test_branding.py  test_browser_auth.py  test_cli.py  test_collection.py  test_config.py  test_domain.py  test_excel_repository.py  test_query_jobs.py  test_scripts.py  test_sqlite_collection.py  test_sqlite_queries.py  test_sqlite_repository.py  test_stoken.py  test_web.py
utils/: logger.py
