[project]
name = "autoseeker"
version = "0.1.0"
description = "AutoSeeker job discovery, filtering, web display, and export automation"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.116,<1",
    "iv8>=0.1.4,<0.2",
    "jinja2>=3.1,<4",
    "openpyxl>=3.1,<4",
    "requests>=2.32,<3",
    "uvicorn>=0.35,<1",
    "websocket-client>=1.8,<2",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pre-commit>=4,<5",
    "pyright>=1.1,<2",
    "pytest>=8,<9",
    "ruff>=0.12,<0.14",
]

[project.scripts]
autoseeker = "auto_seeker.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_seeker"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
